nexus3/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus
spec:
  rules:
  - host: nexus.gdphdc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus3
          servicePort: 80
